# lib2Dalgebra

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/2D_Algebra/: Axis.cxx  Axis.hxx  CMakeLists.txt  Point.cxx  Point.hxx
tests/: CMakeLists.txt
tests/point_tests/: CMakeLists.txt  PointsTests.cxx
